# photomap-explorer

./: .coverage  .gitignore  BRANCH_STRATEGY.md  CHANGELOG.md  DEVELOP_README.md  IMPLEMENTATION_PROMPT_ADDRESSBAR.md  IMPLEMENTATION_PROMPT_FULL.md  MANIFEST.in  PROJECT_STRUCTURE_AND_GUIDE.md  QUICK_VERIFICATION.md  README.md  RELEASE_NOTES_v2.1.2.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.2.1.md  VERIFICATION_REPORT.md  architecture.md  build.bat  build.sh  debug_map_panel_test.py  debug_thumbnail_click.py  debug_ui_test.py  function_test_helper.py  main.py  main_app.py  main_hybrid.py  main_refactored.py  main_window.py  manual_test_helper.py  map.html  panel_diagnosis.py  photomap-explorer.spec  pyproject.toml  replace_debug_prints.py  requirements.txt  run.py  setup.py  simple_folder_test.py  test_folder_selection.py  test_gps_extraction.py  test_map_input.py  (+14 more)
app/: __init__.py  application.py  config.py
apps/: main_app.py
assets/: iconconverter.py
debug/: check_gps_data.py  debug_address_bar_parent.py  debug_address_bar_parent_fixed.py  debug_dummy_todo_search.py  debug_image_click_map.py  debug_initialization_flow.py  debug_panel_display.py  debug_template.py  debug_theme_inheritance.py  debug_widget_tree.py  diagnose_map_display_issue.py  diagnose_map_view.py  fix_map_display.py  test_address_bar_fix.py  test_final_map_integration.py  test_improved_map.py  test_map_html_generation.py  test_map_integration.py  verify_address_bar_fix.py
docs/: ARCHITECTURE_v2.2.0.md  BRANCH_STRATEGY.md  BUG_REPORT_TEMPLATE.md  CONTRIBUTING.md  DEBUG_GUIDELINES.md  (+30 more)
(+183 files in other folders)
